--- a/build.gradle
+++ b/build.gradle
@@ -26,17 +26,24 @@ jar {
   manifest {
     attributes(
         'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
-        'Main-Class': 'labten.Cryptography'
+        'Main-Class': 'labten.experiment.Experiment'
         )
   }
 }
 
 // give the name of the application to run with "gradle run" command
 apply plugin: 'application'
-mainClassName = 'labten.Cryptography'
+mainClassName = 'labten.experiment.Experiment'
 
 // TODO: Using previous examples, add configurations for running JUnit
-
+apply plugin: 'checkstyle'
+checkstyle.toolVersion = '8.1'
+checkstyle {
+  ignoreFailures = false
+    maxWarnings = 0
+    maxErrors = 0
+    configFile = new File(rootDir, "config/checkstyle/google_checks.xml")
+}
 // specify that the application will accept input from System.in
 run {
    standardInput = System.in
