--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,18 @@ task wrapper(type: Wrapper) {
 
 // TODO: Using previous examples, fully update and add to these configurations
 
+// specify the use of JUnit for testing
+dependencies {
+  testCompile 'junit:junit:4.9'
+}
+
+// configure the tests to produce logging output
+test {
+    testLogging {
+        events "passed", "skipped", "failed", "standardOut", "standardError"
+    }
+}
+
 // declare values to place in the manifest file in the JAR
 jar {
   manifest {
